--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     <h1>Webdev 1</h1>
+
+    <img src="https://picsum.photos/200/300" alt="lorem">
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor soluta, voluptatibus cumque quis quam doloribus sapiente impedit! Voluptates consequuntur officiis quod, nemo, saepe dolorum velit repudiandae, veritatis eveniet doloribus obcaecati.</p>
 </body>
 </html>
