--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <img src="https://picsum.photos/200/300" alt="lorem">
 
+    <img id = "cookie" src="cookie.png" alt="">
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor soluta, voluptatibus cumque quis quam doloribus sapiente impedit! Voluptates consequuntur officiis quod, nemo, saepe dolorum velit repudiandae, veritatis eveniet doloribus obcaecati.</p>
 </body>
 </html>
