--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <h1>Webdev 1</h1>
 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact/index.html">Contact</a>
+    </nav>
+
     <img src="https://picsum.photos/200/300" alt="lorem">
 
     <img id = "cookie" src="cookie.png" alt="">
