--- a/home/index.html
+++ b/home/index.html
@@ -12,9 +12,9 @@
     <h1>Webdev 1</h1>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact/index.html">Contact</a>
+        <a href="/home">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
     </nav>
 
     <img src="https://picsum.photos/200/300" alt="lorem">
