--- a/home/index.html
+++ b/home/index.html
@@ -22,5 +22,7 @@
     <img id = "cookie" src="cookie.png" alt="">
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor soluta, voluptatibus cumque quis quam doloribus sapiente impedit! Voluptates consequuntur officiis quod, nemo, saepe dolorum velit repudiandae, veritatis eveniet doloribus obcaecati.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum rem quam officiis labore dolorum porro praesentium, quisquam doloremque incidunt ut repellendus libero ipsam veniam laudantium totam fuga iure eos! Ad.</p>
 </body>
 </html>
