--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
 
     <nav>
         <a href="/home">Home</a>
-        <a href="/about">About</a>
+        <a href="/projects/introduction">intro</a>
         <a href="/contact">Contact</a>
     </nav>
 
