--- a/projects/geocities/index.html
+++ b/projects/geocities/index.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <marquee class="banner" behavior="scroll" direction="">
+          WELCOME TO GEO CITY
+        </marquee>
+        </header>
+        <main>
+          <section>
+            <div class="space">
+              <p>SPACE</p>
+            </div>
+          </section>
+          <section>
+            <div class="water">
+              <p>WATER</p>
+            </div>
+          </section>
+          <section>
+            <div class="forest">
+              <p>FOREST</p>
+            </div>
+          </section>
+        </main>
+        <footer>
+          <marquee class="bottom-banner"behavior="scroll" direction="">
+            &copy; 2022
+          </marquee>
+        </footer>
     
 </body>
 </html>
