--- a/projects/loading/index.html
+++ b/projects/loading/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="loading-container">
+        <div id="loading"></div>
+        <div id="loading-end"></div>
+    </div>
     
 </body>
 </html>
