--- a/projects/loading2/index.html
+++ b/projects/loading2/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="waiting-container">
+        <div id="waiting"></div>
+        <div id="waiting-mid"></div>
+    </div> 
 </body>
 </html>
