--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav>
         <a href="/home">Home</a>
-        <a href="/projects/loading2/">intro</a>
+        <a href="webdev1/projects/loading2/">intro</a>
         <a href="/contact">Contact</a>
     </nav>
 
