--- a/projects/loading2/index.html
+++ b/projects/loading2/index.html
@@ -7,6 +7,7 @@
     <title>Loading - Circle</title>
 </head>
 <body>
+    <a href="/">Back</a>
     <div id="waiting-container">
         <div id="waiting"></div>
         <div id="waiting-mid"></div>
