--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Webdev 1</h1>
     
             <nav>
-                <a href="/projects/loading2">Anim</a>
+                <a href="/projects/loading2/">Anim</a>
                 <a href="/contact">Contact</a>
             </nav>
     
