--- a/index.html
+++ b/index.html
@@ -20,24 +20,28 @@
     
         </header>
         <main>
-            <section>
-                <h1>Open-Ended Projects</h1>
-
-                <nav>
-                    <a href="projects/introduction/">Personal Introduction</a>
-
-                    <a href="projects/column/">Single Column Deluxe</a>
-
-                    <a href="projects/geocities/">Geocities</a>
-
-                    <a href="projects/loading/">Loading - Bar</a>
-
-                    <a href="projects/loading2/">Loading - Circle</a>
-
-                    <a href=""></a>
-                </nav>
-
-            </section>
+            <div id="projects">
+                <div id="open-projects">
+                    <h1>Open-Ended Projects</h1>
+                    <nav>
+                        <a href="projects/introduction/">Personal Introduction</a>
+                        <a href="projects/column/">Single Column Deluxe</a>
+                        <a href="projects/geocities/">Geocities</a>
+                        <a href="projects/loading/">Loading - Bar</a>
+                        <a href="projects/loading2/">Loading - Circle</a>
+                    </nav>
+                </div>
+    
+                <div id="recreation-projects">
+                    <h1>Recreation Projects</h1>
+                    <nav>
+                        <a href="projects/recreation1/">Recreation #1</a>
+                        <a href="projects/recreation2/">Recreation #2</a>
+                        <a href="projects/recreation3/">Recreation #3</a>
+                        <a href="projects/recreation4/">Recreation #4</a>
+                    </nav>
+                </div>
+            </div>
 
         </main>
         <footer>
