--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 </head>
 <body>
     <header>
-        <h1>Webdev 1</h1>
+        <h1>Webdev 1 - Portfolio</h1>
 
 
 
     </header>
     <main>
+        <div id="intro">
+            <h2> Welcome to my Portfolio!</h2>
+
+            <p>Hello! My name is Alex Gartner, a computer science major at Columbia College Chicago, and this is my portfolio for my Web Development class. It contains the various projects we have worked on throughout the Fall 2022 semester.</p>
+
+        </div>
         <div id="projects">
             <div id="open-projects">
                 <h2>Open-Ended Projects</h1>
