--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <a href="projects/geocities/">Geocities</a>
                     <a href="projects/loading/">Loading - Bar</a>
                     <a href="projects/loading2/">Loading - Circle</a>
+                    <a href="projects/final/">Final Project</a>
                 </nav>
             </div>
 
@@ -47,7 +48,7 @@
 
     </main>
     <footer>
-
+        <p>&copy; 2022</p>
     </footer>
 </body>
 </html>
