--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -9,6 +9,41 @@
     <title>Final Project</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Final Project</h1>
+        <h2>The Evolution of Video Games</h2>
+    </header>
+    <main>
+        <section id="intro">
+            <h3>Computers and Games</h3>
+            <div id="games">
+                <h4>Origin of Games</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates recusandae nam similique dolor, dolorum aliquam voluptatum perspiciatis explicabo repellat veniam repellendus vitae earum ab voluptatem non error odit est consequuntur.</p>
+            </div>
+            <div id="computer">
+                <h4>Origin of Computers</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis maiores sed quibusdam deleniti! Veniam culpa, laboriosam maxime impedit asperiores veritatis consequatur labore tempora magni sint est exercitationem eveniet placeat.</p>
+            </div>
+        </section>
+        <section id="first-game">
+            <h3>First Computer Game</h3>
+            <h4>Spacewar!</h4>
+            <p>Spacewar! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates iure enim quo, eum recusandae fugit, numquam odio eos adipisci architecto excepturi earum officiis a asperiores, illum aspernatur facere dicta saepe!</p>
+        </section>
+        <section id="second-game">
+            <h3>First Mainstream Game</h3>
+            <h4>Pong</h4>
+            <p>Pong. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ab ducimus in voluptates dicta et adipisci hic esse eveniet aspernatur, modi architecto, eligendi commodi aliquam magni dolorum reprehenderit rem fugit.</p>
+            <a href="animation/">Pong</a>
+        </section>
+        <section id="conclusion">
+            <h3>Impact of Computer Games</h3>
+            <h4>Society and Games</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est possimus magni blanditiis fugiat incidunt minima aliquam dolorem ab consequuntur eum consequatur molestiae qui laborum adipisci quo, culpa illo repudiandae quibusdam.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2022</p>
+    </footer>
 </body>
 </html>
