--- a/projects/final/animation/index.html
+++ b/projects/final/animation/index.html
@@ -8,6 +8,12 @@
     <title>Animation - Pong</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="paddle" id="p1"></div>
+
+        <div id="ball"></div>
+
+        <div class="paddle" id="p2"></div>
+    </div>
 </body>
 </html>
